GearsetPOC/force-app/main/default/objects/B2b_AccountCTC__c/B2b_AccountCTC__c.object-meta.xml
<CustomObject>
    <description>Junction Object delivered to support New Corporate Offer Project May /June 2024</description>
    <label>Account CTC</label>
    <nameField>
        <displayFormat>CTC-{0000}</displayFormat>
        <label>Account CTC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account CTCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>