GearsetPOC/force-app/main/default/objects/B2b_AccountCTC__c/fields/B2b_AccountId__c.field-meta.xml
<CustomField>
    <fullName>B2b_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Account CTCs</relationshipLabel>
    <relationshipName>Account_CTCs</relationshipName>
    <type>Lookup</type>
</CustomField>