GearsetPOC/force-app/main/default/objects/B2b_AccountCTC__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <formula>B2b_AccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account</label>
    <type>Text</type>
</CustomField>