GearsetPOC/force-app/main/default/objects/B2b_AccountCTC__c/fields/Code_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Record_Type__c</fullName>
    <formula>Corp_Tracking_Type_And_Code__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Record Type</label>
    <type>Text</type>
</CustomField>